# BitBlanket-Travel-Agent

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  README.md  SECURITY.md  compose.yaml  dev.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_agent.bat  start_all.bat  start_api.bat  start_frontend.bat
agent/: __init__.py  pyproject.toml  requirements.txt
agent/src/agent_hub/: __init__.py  core.py  metrics.py
agent/src/application/: langchain_demo.py  test_langchain.py
agent/src/core/: __init__.py  conversation_manager.py  dialogue_policy.py  travel_agent.py
agent/src/graph/: __init__.py  builder.py  memory_integration.py  nodes.py  prompt_templates.py  runtime_config.py  state.py
agent/src/llm/: __init__.py  cache.py  langchain_adapter.py
agent/src/memory/: __init__.py  context_tracker.py  importance_scorer.py
agent/src/planning/: __init__.py  auto_planner.py
agent/src/reasoner/: __init__.py  entity_linker.py
agent/src/reflection/: __init__.py
agent/src/skills/: __init__.py  store.py
agent/src/speech/: __init__.py
agent/src/tools/: __init__.py  learning.py  plugin.py  registry.py  semantic_matcher.py  travel_api.py  travel_tools.py  version_manager.py
agent/src/vision/: __init__.py  processor.py
agent/src/visualization/: __init__.py  map.py
agent/tests/: test_config_manager.py  test_di.py  test_infrastructure_modules.py  test_langchain_graph.py  test_llm_client.py  test_memory_attention.py  test_memory_eviction_policy.py  test_memory_integration.py  test_memory_recirculation.py  test_memory_reflection.py  test_memory_retrieval.py  test_memory_vectorizer.py  test_v3_integration.py
agent/travel_agent/: __init__.py  runtime_event_emitters.py  runtime_sources.py
agent/travel_agent/artifacts/: __init__.py
agent/travel_agent/contracts/: __init__.py  execution_receipt.py  skills.py  supervisor_events.py  supervisor_orchestration.py
agent/travel_agent/graph/: __init__.py  builder.py  checkpoint_sql_tables.py  legacy_runtime.py  memory_integration.py  nodes.py  persistent_checkpointer.py  postgres_checkpointer.py  prompt_templates.py  runtime_config.py  runtime_flow.py  state.py
agent/travel_agent/llm/: __init__.py  langchain_adapter.py
agent/travel_agent/memory/: __init__.py  conflict_resolution.py  file_memory_session_repository.py  memory_session_repository.py  persistence.py  postgres_memory_session_repository.py
agent/travel_agent/pipelines/: __init__.py  planning.py  verification.py
agent/travel_agent/runtime/: __init__.py  agent_runtime.py  legacy_bridge.py  runtime_driver.py
agent/travel_agent/skills/: __init__.py  registry.py
agent/travel_agent/subagents/: __init__.py  base.py  budget.py  planning.py  registry.py  research.py  verification.py
agent/travel_agent/supervisor/: __init__.py  builder.py  nodes.py
agent/travel_agent/tools/: __init__.py  travel_api.py  travel_tools.py
backend/: __init__.py  pyproject.toml
backend/config/: __init__.py  llm_config.yaml  server_config.yaml.example
backend/moyuan_web/: app_meta.py  bootstrap.py  bootstrap_app.py  bootstrap_container.py  bootstrap_services.py  error_handlers.py  main.py  observability.py  startup_checks.py
backend/moyuan_web/api/: __init__.py  error_codes.py  validation.py
backend/moyuan_web/config/: config_manager.py  runtime.py
backend/moyuan_web/dependencies/: __init__.py  container.py  providers.py
backend/moyuan_web/middleware/: __init__.py
backend/moyuan_web/routes/: chat.py  (+11 more)
web/: __init__.py  pyproject.toml
web/moyuan_web/: bootstrap.py  bootstrap_app.py  bootstrap_services.py
web/shuai_web/: __init__.py  app_meta.py  bootstrap.py  main.py  observability.py  startup_checks.py
web/src/: logging_uvicorn.json  main.py
(+468 files in other folders)
